--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,296 @@
-.App {
-  text-align: center;
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #042727;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.header {
+    display: flex;
+    background-color: black;
+    justify-content: space-between;
+    padding: 15px;
+    max-width: 1200px;
+    min-width: 300px;
+    
   }
+
+  .header-menu {
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .link {
+    padding: 10px 40px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #ffff;
+    font-size: 15px;
+    font-weight: bolder;
+  }
+
+  .logo {
+    padding: 10px 40px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #38E54D;
+    font-size: 27px;
+    font-weight: bolder;
+    
+  }
+
+  span {
+    color: #F0FF42;
+  }
+
+  .flex-wrapper {
+    width: 100%;
+    max-height: 450px;
+    display: flex;
+    justify-content: center;
+    background-color: #38E54D;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.slider-wrapper{
+    max-width: 1500px;
+    width: 100%;
+    max-height: 560px;
+    position: relative;
+}
+
+.slider {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+
+.btn-prev, .btn-next, .slider-link {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+
+}
+
+.foto{
+   width: 100%;
+   height: 100%;
+   
+ }
+
+ .slider-link {
+  
+  top: 80%;
+  right: 170px;
+  text-decoration: none;
+  
+  width: 100px;
+  padding: 15px 40px;
+  border-radius: 10px;
+  text-transform: uppercase;
+  
+	 
+	vertical-align: top;
+ }
+
+ .slider-link, .subtitle-show {
+  background-color: #38E54D;
+  box-shadow: 2px 3px #22a031;
+	cursor: pointer;
+ }
+
+ .slider-link:hover, .subtitle-show:hover {
+	background-color: #14be28;
+}
+.slider-link:active, .subtitle-show:active {
+	background-color: #66e475 ;
+  
+}
+
+.btn-next {
+    left: auto;
+    right: 0;
+}
+.btn-prev:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.btn-next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.subtitle {
+  display: flex;
+  justify-content: center;
+ 
+}
+
+.subtitle-par {
+  text-align: center;
+  padding: 30px;
+  width: 80%;
+  font-weight: 500;
+  color: #ffff;
+}
+
+.subtitle-show {
+  color: #ffff;
+  padding: 8px;
+  font-size: 15px;
+  border-radius: 3px;
+  border: none;
+}
+
+h1 {
+  color: #ffff;
+  margin: 50px 150px;
+  font-size: 35px;
+}
+
+h2 {
+  color: #ffff;
+  margin: 30px 100px;
+  font-size: 31px;
+  
+}
+
+.cont{
+  display: flex;
+  justify-content:center;
+  flex-wrap: wrap;
+ 
+  
+  }
+
+.change {
+  font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    padding: 7px;
+    margin: 30px;
+    background-color: #042727;
+    color: #ffff;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    transition: .7s;
+    
+    
+}
+
+.change:hover {
+  border-top: #ffff solid 2px;
+  font-size: 17px;
+  
+ 
+}
+
+.wrap {
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  
+}
+
+.wrap-movie {
+  width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 30px;
+ 
+}
+
+.wrap-movie-pic, .home-container-wrap-pic {
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+.wrap-movie-list {
+  font-size: 14px;
+}
+
+.home-container-wrap-list {
+  font-size: 11px;
+}
+
+.wrap-movie-list, .home-container-wrap-list {
+  color: #ffff;
+  text-align: center;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  margin-top: 20px;
+  font-family: 'Montserrat', sans-serif;
+  
+}
+
+.home-container {
+  margin-top: 60px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.home-container-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 150px;
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media all and (max-width: 800px) {
+
+  .link {
+    padding: 5px 15px;
+    font-size: 15px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .logo {
+    padding: 5px 15px;
+    font-size: 25px;
   }
+
+  
+ 
+
+}
+
+
+@media all and (max-width: 500px) {
+
+  .slider-link {
+  width: 70px;
+  font-size: 13px;
+  
+  padding: 15px 20px;
+  right: 50px;
+}
+
+h1 {
+  margin: 50px 70px;
+  font-size: 28px;
+}
+
+h2 {
+  margin: 50px 35px;
+  font-size: 26px;
+}
 }
